--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     /* define instructions trial */
     var instructions = {
       type: "html-button-response",
-      stimulus: "<p> Door de volgende vragen te beantwoorden, neemt u deel aan een onderzoek dat wordt uitgevoerd door onderzoekers van het Department of Language Science van de University of California, Irvine. Als u vragen heeft over dit onderzoek, kunt u contact opnemen met Richard Futrell (rfutrell@uci.edu). U moet minstens 18 jaar oud zijn om deel te nemen. Uw deelname aan dit onderzoek is vrijwillig. U kunt op elk moment weigeren verder deel te nemen zonder nadelige gevolgen. Uw anonimiteit is gewaarborgd; de onderzoekers die u vragen deel te nemen, ontvangen geen persoonlijke gegevens over u. </p>",
+      stimulus: "<p> Door de volgende vragen te beantwoorden, neemt u deel aan een onderzoek dat wordt uitgevoerd door onderzoekers van het Centre for Language Studies van de Radboud Universiteit, Nijmegen. Als u vragen heeft over dit onderzoek, kunt u contact opnemen met Stefan Frank (stefan.frank@ru.nl). U moet minstens 18 jaar oud zijn om deel te nemen. Uw deelname aan dit onderzoek is vrijwillig. U kunt op elk moment weigeren verder deel te nemen zonder nadelige gevolgen. Uw anonimiteit is gewaarborgd; de onderzoekers die u vragen deel te nemen, ontvangen geen persoonlijke gegevens over u. </p>",
       choices: ['Verder'],
 
       post_trial_gap: 500
@@ -404,7 +404,7 @@
             //proliferate.submit(jsPsych.data.get().filter({trial_type: 'html-keyboard-response-ld'}).csv());
             //proliferate.submit(jsPsych.data.get().filter({trial_type: 'survey-text'}).json());
             //proliferate.submit(jsPsych.data.get().filter({trial_type: 'survey-multi-choice'}).json());
-            proliferate.submit({"trials": jsPsych.data.get().filter([{trial_type: 'html-keyboard-response'},{trial_type: 'survey-text'},{trial_type: 'survey-multi-choice'},{trial_type: 'html-button-response',Entry_Number:1},{trial_type: 'html-slider-response',Entry_Number:1}]).values()});
+            proliferate.submit({"trials": jsPsych.data.get().filter([{trial_type: 'html-keyboard-response'},{trial_type: 'survey-text'},{trial_type: 'survey-multi-choice'},{trial_type: 'survey-multi-select'},{trial_type: 'html-button-response',Entry_Number:1},{trial_type: 'html-slider-response',Entry_Number:1}]).values()});
       }
     });
   </script>
